--- a/index.html
+++ b/index.html
@@ -43,72 +43,94 @@
         <div class="dashboard-container">
             <div class="glass-card"><h3>🕒 Recent Uploads</h3><div id="recent-list"></div></div>
             <div class="glass-card"><h3>🔥 Trending Now</h3><div id="trending-list"></div></div>
-            <div class="glass-card"><h3>📂 Categories</h3><div id="category-folders"></div></div>
+            <div class="glass-card">
+                <h3>📂 Folders</h3>
+                <div style="display:flex; flex-wrap:wrap; gap:5px;">
+                    <button class="btn-blue" onclick="loadCat('Systematic Theology')">Theology</button>
+                    <button class="btn-blue" onclick="loadCat('CHURCH History')">History</button>
+                </div>
+            </div>
         </div>
     </div>
 
     <div id="prof-view" class="hidden">
-        <div class="glass-card"><h3>My Profile</h3><p id="p-name"></p><button class="btn-blue" style="background:red; width:100%;" onclick="logout()">Logout</button></div>
-        <div class="glass-card"><h3>📚 Borrowed Collection</h3><div id="borrowed-list"></div></div>
+        <div class="glass-card"><h3>Profile</h3><p id="p-name"></p><button class="btn-blue" style="background:red" onclick="logout()">Logout</button></div>
+        <div class="glass-card"><h3>Borrowed Collection</h3><div id="borrowed-list"></div></div>
+    </div>
+
+    <div id="cat-view" class="hidden">
+        <button onclick="document.getElementById('cat-view').classList.add('hidden')" class="btn-blue" style="background:#64748b; margin-bottom:15px;">← Back</button>
+        <h3 id="cat-name"></h3><div id="cat-list"></div>
     </div>
 </div>
 
 <div id="reader-overlay" class="hidden">
     <div style="padding:10px; background:#1e293b; color:white; display:flex; justify-content:space-between; align-items:center;">
-        <span>Reader Mode</span>
-        <button onclick="closeReader()" style="background:red; color:white; border:none; padding:5px 12px; border-radius:6px;">Close</button>
+        <span>Reading Mode</span>
+        <button onclick="closeReader()" style="background:red; color:white; border:none; padding:5px 12px; border-radius:6px;">Exit</button>
     </div>
     <iframe id="pdf-frame" src="" style="flex-grow:1; border:none; width:100%;"></iframe>
 </div>
 
 <script>
-    // ... Firebase Init ...
+    const firebaseConfig = {
+      apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg",
+      authDomain: "student-library-4a4e7.firebaseapp.com",
+      projectId: "student-library-4a4e7",
+      storageBucket: "student-library-4a4e7.firebasestorage.app",
+      messagingSenderId: "827419448917",
+      appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc"
+    };
+    firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
     const auth = firebase.auth();
     let currentUser = null;
-    let startTime = null;
 
     auth.onAuthStateChanged(user => {
         if(user) {
-            currentUser = user; startTime = Date.now();
+            currentUser = user;
             document.getElementById('auth-screen').classList.add('hidden');
             document.getElementById('dashboard').classList.remove('hidden');
             document.getElementById('p-name').innerText = user.displayName;
             loadLib(); listenBorrows();
-            logAct("Logged In");
         }
     });
 
-    function logAct(type, dur = "0s") {
-        if(currentUser) db.collection("activity_logs").add({ userId: currentUser.uid, userName: currentUser.displayName, activityType: type, duration: dur, timestamp: new Date().toISOString() });
-    }
-
-    let rStart = null; let rType = "";
-    function openPdf(id, s, type) {
-        rStart = Date.now(); rType = type;
-        document.getElementById('pdf-frame').src = `public/${id}${s}.pdf#toolbar=0`;
-        document.getElementById('reader-overlay').classList.remove('hidden');
-    }
-
-    function closeReader() {
-        const dur = Math.round((Date.now() - rStart)/1000) + "s";
-        logAct(rType, dur);
-        document.getElementById('reader-overlay').classList.add('hidden');
-        document.getElementById('pdf-frame').src = "";
-    }
-
     function renderB(id, t) {
-        return `<div class="book-item"><span><b>${t || id}</b></span>
-            <div><button class="btn-blue" onclick="openPdf('${id}', '_read_online', 'Preview')">Preview</button>
+        return `<div class="book-item" data-title="${(t||'').toLowerCase()}"><span><b>${t || id}</b></span>
+            <div><button class="btn-blue" onclick="openPdf('${id}', '_read_online')">Preview</button>
             <button class="btn-blue" style="background:#eee;color:#333;" onclick="borrowB('${id}', '${t}')">Borrow</button></div></div>`;
     }
 
-    // ... Search, LoadCat, Logout Logic same as previous stable version ...
-    function logout() {
-        const total = Math.round((Date.now() - startTime)/1000) + "s";
-        logAct("App Closed", total);
-        auth.signOut().then(() => location.reload());
+    function loadLib() {
+        db.collection("library_settings").onSnapshot(snap => {
+            const rL = document.getElementById('recent-list'), tL = document.getElementById('trending-list');
+            rL.innerHTML = ""; tL.innerHTML = "";
+            snap.forEach(doc => {
+                const b = doc.data();
+                if(b.recent) rL.innerHTML += renderB(doc.id, b.title);
+                if(b.trending) tL.innerHTML += renderB(doc.id, b.title);
+            });
+        });
     }
+
+    // FIXED SEARCH LOGIC
+    function searchLib(q) {
+        if(q.length < 3) {
+            document.querySelectorAll('.book-item').forEach(el => el.style.display = "flex");
+            return;
+        }
+        document.querySelectorAll('.book-item').forEach(el => {
+            el.style.display = el.dataset.title.includes(q.toLowerCase()) ? "flex" : "none";
+        });
+    }
+
+    // ... Other logic same as previous stable version ...
+    function openPdf(id, s) { document.getElementById('pdf-frame').src = `public/${id}${s}.pdf#toolbar=0`; document.getElementById('reader-overlay').classList.remove('hidden'); }
+    function closeReader() { document.getElementById('reader-overlay').classList.add('hidden'); document.getElementById('pdf-frame').src = ""; }
+    function switchMainTab(t) { document.getElementById('lib-view').classList.toggle('hidden', t !== 'lib'); document.getElementById('prof-view').classList.toggle('hidden', t !== 'prof'); }
+    function signInWithGoogle() { auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); }
+    function logout() { auth.signOut().then(() => location.reload()); }
 </script>
 </body>
 </html>
