--- a/index.html
+++ b/index.html
@@ -17,37 +17,36 @@
         .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: #e2e8f0; font-size: 14px; }
         .tab-btn.active { background: var(--blue); color: white; }
         .search-box { width: 100%; padding: 12px; border-radius: 12px; border: 2px solid #e2e8f0; margin-bottom: 20px; outline: none; }
+        .folder-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(80px, 1fr)); gap: 8px; }
+        .folder { background: #f8fafc; padding: 10px; border-radius: 12px; text-align: center; cursor: pointer; font-size: 10px; font-weight: 600; border: 1px solid #e2e8f0; }
         .book-item { background: white; padding: 12px; border-radius: 12px; margin-bottom: 8px; border: 1px solid #f1f5f9; display: flex; justify-content: space-between; align-items: center; }
-        .btn-blue { background: var(--blue); color: white; border: none; padding: 8px 15px; border-radius: 8px; cursor: pointer; font-weight: 600; font-size: 11px; }
+        .btn-blue { background: var(--blue); color: white; border: none; padding: 8px 12px; border-radius: 8px; cursor: pointer; font-size: 11px; }
         .hidden { display: none !important; }
         #reader-overlay { position: fixed; inset: 0; background: white; z-index: 2000; display: flex; flex-direction: column; }
     </style>
 </head>
 <body>
 
-<div id="auth-screen">
-    <div class="glass-card" style="max-width:400px; margin: 80px auto; text-align:center;">
-        <h2 style="color:var(--blue)">Theological Library</h2>
-        <button class="btn-blue" style="width:100%; padding:15px;" onclick="signInWithGoogle()">Login with Google</button>
-    </div>
-</div>
-
-<div id="dashboard" class="hidden">
+<div id="dashboard">
     <div class="nav-tabs">
         <button id="t-lib" class="tab-btn active" onclick="switchMainTab('lib')">Library</button>
         <button id="t-prof" class="tab-btn" onclick="switchMainTab('prof')">Profile & Borrowed</button>
     </div>
 
     <div id="lib-view">
-        <input type="text" id="libSearch" class="search-box" placeholder="🔍 Search library (min. 3 characters)..." onkeyup="searchLib(this.value)">
+        <input type="text" id="libSearch" class="search-box" placeholder="🔍 Search (min. 3 characters)..." onkeyup="searchLib(this.value)">
         <div class="dashboard-container">
             <div class="glass-card"><h3>🕒 Recent Uploads</h3><div id="recent-list"></div></div>
             <div class="glass-card"><h3>🔥 Trending Now</h3><div id="trending-list"></div></div>
             <div class="glass-card">
                 <h3>📂 Folders</h3>
-                <div style="display:flex; flex-wrap:wrap; gap:5px;">
-                    <button class="btn-blue" onclick="loadCat('Systematic Theology')">Theology</button>
-                    <button class="btn-blue" onclick="loadCat('CHURCH History')">History</button>
+                <div class="folder-grid">
+                    <div class="folder" onclick="loadCat('Systematic Theology')">📖 Theology</div>
+                    <div class="folder" onclick="loadCat('CHURCH History')">⛪ History</div>
+                    <div class="folder" onclick="loadCat('Mission')">🌍 Mission</div>
+                    <div class="folder" onclick="loadCat('Acts of Apostles')">📜 Acts</div>
+                    <div class="folder" onclick="loadCat('Synoptic Gospel')">✝️ Gospel</div>
+                    <div class="folder" onclick="loadCat('Introduction to BIBLE')">📘 Bible</div>
                 </div>
             </div>
         </div>
@@ -66,8 +65,8 @@
 
 <div id="reader-overlay" class="hidden">
     <div style="padding:10px; background:#1e293b; color:white; display:flex; justify-content:space-between; align-items:center;">
-        <span>Reading Mode</span>
-        <button onclick="closeReader()" style="background:red; color:white; border:none; padding:5px 12px; border-radius:6px;">Exit</button>
+        <span>Reader Mode</span>
+        <button onclick="closeReader()" style="background:red; color:white; border:none; padding:5px 12px; border-radius:6px;">Close</button>
     </div>
     <iframe id="pdf-frame" src="" style="flex-grow:1; border:none; width:100%;"></iframe>
 </div>
@@ -89,8 +88,6 @@
     auth.onAuthStateChanged(user => {
         if(user) {
             currentUser = user;
-            document.getElementById('auth-screen').classList.add('hidden');
-            document.getElementById('dashboard').classList.remove('hidden');
             document.getElementById('p-name').innerText = user.displayName;
             loadLib(); listenBorrows();
         }
@@ -99,7 +96,7 @@
     function renderB(id, t) {
         return `<div class="book-item" data-title="${(t||'').toLowerCase()}"><span><b>${t || id}</b></span>
             <div><button class="btn-blue" onclick="openPdf('${id}', '_read_online')">Preview</button>
-            <button class="btn-blue" style="background:#eee;color:#333;" onclick="borrowB('${id}', '${t}')">Borrow</button></div></div>`;
+            <button class="btn-blue" style="background:#eee;color:#333;" onclick="borrowBook('${id}', '${t}')">Borrow</button></div></div>`;
     }
 
     function loadLib() {
@@ -114,23 +111,16 @@
         });
     }
 
-    // FIXED SEARCH LOGIC
     function searchLib(q) {
-        if(q.length < 3) {
-            document.querySelectorAll('.book-item').forEach(el => el.style.display = "flex");
-            return;
-        }
+        if(q.length < 3) { document.querySelectorAll('.book-item').forEach(el => el.style.display = "flex"); return; }
         document.querySelectorAll('.book-item').forEach(el => {
             el.style.display = el.dataset.title.includes(q.toLowerCase()) ? "flex" : "none";
         });
     }
 
-    // ... Other logic same as previous stable version ...
     function openPdf(id, s) { document.getElementById('pdf-frame').src = `public/${id}${s}.pdf#toolbar=0`; document.getElementById('reader-overlay').classList.remove('hidden'); }
     function closeReader() { document.getElementById('reader-overlay').classList.add('hidden'); document.getElementById('pdf-frame').src = ""; }
     function switchMainTab(t) { document.getElementById('lib-view').classList.toggle('hidden', t !== 'lib'); document.getElementById('prof-view').classList.toggle('hidden', t !== 'prof'); }
-    function signInWithGoogle() { auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); }
-    function logout() { auth.signOut().then(() => location.reload()); }
 </script>
 </body>
 </html>
