--- a/admin.html
+++ b/admin.html
@@ -21,10 +21,11 @@
         .dropdown-menu { display: none; position: absolute; background: white; border: 1px solid #ddd; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); z-index: 100; min-width: 180px; padding: 10px; top: 40px; }
         .show { display: block; }
         .dropdown-item { padding: 8px; cursor: pointer; border-radius: 5px; font-size: 12px; }
+        .dropdown-item:hover { background: #f0f7ff; color: var(--blue); }
         .user-folder { background: #f1f5f9; padding: 15px; border-radius: 12px; margin-bottom: 10px; cursor: pointer; }
-        .hidden { display: none !important; }
         #user-modal { position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 2000; display: flex; align-items: center; justify-content: center; }
         .modal-content { background: white; width: 90%; max-width: 500px; border-radius: 20px; padding: 20px; max-height: 80vh; overflow-y: auto; }
+        .hidden { display: none !important; }
     </style>
 </head>
 <body>
@@ -35,15 +36,16 @@
     </div>
 
     <div id="inv-section" class="card">
-        <h2>📂 Global PDF Inventory</h2>
+        <h3>📂 Global PDF Inventory</h3>
         <table>
-            <thead><tr><th>PDF File</th><th>Category</th><th>Assign / Recommend / Promo</th><th>Action</th></tr></thead>
+            <thead><tr><th>PDF File</th><th>Category</th><th>Placement Options</th><th>Action</th></tr></thead>
             <tbody id="inventory-list"></tbody>
         </table>
     </div>
 
-    <div id="mem-section" class="hidden">
-        <div class="card"><h3>👥 Student Activity Folders</h3><div id="user-folders-list"></div></div>
+    <div id="mem-section" class="hidden card">
+        <h3>👥 Faculty & Member Folders</h3>
+        <div id="user-folders-list"></div>
     </div>
 
     <div id="user-modal" class="hidden">
@@ -68,14 +70,19 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    const cats = ["Systematic Theology", "CHURCH History", "Mission", "Acts of Apostles", "Synoptic Gospel", "Introduction to BIBLE"];
-    
+    const categories = ["Systematic Theology", "CHURCH History", "Mission", "Acts of Apostles", "Synoptic Gospel", "Introduction to BIBLE"];
+    let facultyList = [];
+
     function switchTab(t) {
         document.getElementById('inv-section').classList.toggle('hidden', t !== 'inv');
         document.getElementById('mem-section').classList.toggle('hidden', t !== 'mem');
         document.getElementById('t-inv').classList.toggle('active', t === 'inv');
         document.getElementById('t-mem').classList.toggle('active', t === 'mem');
     }
+
+    db.collection("users").where("position", "==", "faculty").onSnapshot(snap => {
+        facultyList = []; snap.forEach(doc => facultyList.push({ name: doc.data().fullName }));
+    });
 
     db.collection("library_settings").onSnapshot(snap => {
         const list = document.getElementById('inventory-list'); list.innerHTML = "";
@@ -86,7 +93,11 @@
                 <td>${b.category || 'Unassigned'}</td>
                 <td style="position:relative;">
                     <button class="btn-sm" style="background:#dcfce7" onclick="toggleM('c-${id}')">➕ Cat</button>
-                    <div id="c-${id}" class="dropdown-menu">${cats.map(c => `<div class="dropdown-item" onclick="upd('${id}','category','${c}')">${c}</div>`).join('')}</div>
+                    <div id="c-${id}" class="dropdown-menu">${categories.map(c => `<div class="dropdown-item" onclick="upd('${id}','category','${c}')">${c}</div>`).join('')}</div>
+                    
+                    <button class="btn-sm" style="background:#f3e8ff" onclick="toggleM('r-${id}')">⭐ Rec</button>
+                    <div id="r-${id}" class="dropdown-menu">${facultyList.map(f => `<div class="dropdown-item" onclick="addRec('${id}','${f.name}')">${f.name}</div>`).join('')}</div>
+
                     <button class="btn-sm" style="background:#fef9c3" onclick="toggleM('p-${id}')">🔥 Promo</button>
                     <div id="p-${id}" class="dropdown-menu">
                         <div class="dropdown-item" onclick="upd('${id}','recent',${!b.recent})">${b.recent?'❌ Rem':'✅ Add'} Recent</div>
@@ -102,24 +113,25 @@
         const list = document.getElementById('user-folders-list'); list.innerHTML = "";
         snap.forEach(doc => {
             const u = doc.data();
-            list.innerHTML += `<div class="user-folder" onclick="openFolder('${doc.id}', '${u.fullName}')">📂 <b>${u.fullName}</b><br><small>${u.email}</small></div>`;
+            list.innerHTML += `<div class="user-folder" onclick="openUserFolder('${doc.id}', '${u.fullName}')">📂 <b>${u.fullName}</b><br><small>${u.email}</small></div>`;
         });
     });
 
-    async function openFolder(uid, name) {
-        document.getElementById('modal-title').innerText = name + "'s History";
+    async function openUserFolder(uid, name) {
+        document.getElementById('modal-title').innerText = name;
         document.getElementById('user-modal').classList.remove('hidden');
         const logs = await db.collection("activity_logs").where("userId", "==", uid).get();
         const borrows = await db.collection("borrows").where("userId", "==", uid).get();
         let h = `<h4>Stats</h4>`;
-        logs.forEach(l => { const d = l.data(); h += `<p style="font-size:11px;">• ${d.activityType} (${d.duration})</p>`; });
+        logs.forEach(l => h += `<p style="font-size:11px;">• ${l.data().activityType} (${l.data().duration})</p>`);
         h += `<h4 style="margin-top:15px;">Borrows</h4>`;
-        borrows.forEach(b => { h += `<p style="font-size:11px;">• ${b.data().title}</p>`; });
+        borrows.forEach(b => h += `<p style="font-size:11px;">• ${b.data().title}</p>`);
         document.getElementById('modal-body').innerHTML = h || "No data.";
     }
 
     function toggleM(id) { document.querySelectorAll('.dropdown-menu').forEach(m => m.id !== id ? m.classList.remove('show') : null); document.getElementById(id).classList.toggle('show'); }
     async function upd(id, f, v) { await db.collection("library_settings").doc(id).update({ [f]: v }); }
+    async function addRec(id, f) { await db.collection("recommendations").add({ bookId: id, facultyName: f, timestamp: new Date().toISOString() }); }
     async function resetB(id) { await db.collection("library_settings").doc(id).update({ category: null, recent: false, trending: false }); }
 </script>
 </body>
