Change header text to 'Theological Library'

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <div id="dashboard" class="hidden">
     <div class="header-bar">
-        <div><span style="color:var(--blue); font-weight:800; font-size:12px;">JESUS IS THE SAVIOUR</span><h1 style="margin:0; font-size:18px;">Library</h1></div>
+        <div><span style="color:var(--blue); font-weight:800; font-size:12px;">Theological Library</span><h1 style="margin:0; font-size:18px;">Library</h1></div>
         <div id="clock" class="clock-box">00:00:00</div>
     </div>
     <div class="nav-tabs">
